@@ -24,31 +24,22 @@ import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class GamificationServiceTest {
-
     @Mock
     private UserRepository userRepository;
-
     @Mock
     private AchievementRepository achievementRepository;
-
     @Mock
     private UserAchievementRepository userAchievementRepository;
-
     @Mock
     private SurplusPostRepository surplusPostRepository;
-
     @Mock
     private ClaimRepository claimRepository;
-
     @Mock
     private MessageRepository messageRepository;
-
     @Mock
     private ConversationRepository conversationRepository;
-
     @InjectMocks
     private GamificationService gamificationService;
-
     private User donor;
     private User receiver;
     private Achievement donationAchievement;
@@ -63,14 +54,12 @@ class GamificationServiceTest {
         donor.setEmail("donor@test.com");
         donor.setRole(UserRole.DONOR);
         donor.setTotalPoints(100);
-
         // Create receiver user
         receiver = new User();
         receiver.setId(2L);
         receiver.setEmail("receiver@test.com");
         receiver.setRole(UserRole.RECEIVER);
         receiver.setTotalPoints(50);
-
         // Create donation achievement
         donationAchievement = new Achievement();
         donationAchievement.setId(1L);
@@ -81,7 +70,6 @@ class GamificationServiceTest {
         donationAchievement.setCriteriaValue(1);
         donationAchievement.setPointsValue(10);
         donationAchievement.setIsActive(true);
-
         // Create claim achievement
         claimAchievement = new Achievement();
         claimAchievement.setId(2L);
@@ -92,7 +80,6 @@ class GamificationServiceTest {
         claimAchievement.setCriteriaValue(1);
         claimAchievement.setPointsValue(15);
         claimAchievement.setIsActive(true);
-
         // Create social achievement
         socialAchievement = new Achievement();
         socialAchievement.setId(3L);
@@ -106,16 +93,13 @@ class GamificationServiceTest {
     }
 
     // ==================== Tests for awardPoints ====================
-
     @Test
     void testAwardPoints_Success() {
         // Given
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         gamificationService.awardPoints(1L, 50, "Test reward");
-
         // Then
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
         verify(userRepository).save(userCaptor.capture());
@@ -127,12 +111,10 @@ class GamificationServiceTest {
     void testAwardPoints_UserNotFound_ThrowsException() {
         // Given
         when(userRepository.findById(999L)).thenReturn(Optional.empty());
-
         // When & Then
         assertThatThrownBy(() -> gamificationService.awardPoints(999L, 50, "Test"))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("User not found");
-
         verify(userRepository, never()).save(any(User.class));
     }
 
@@ -142,10 +124,8 @@ class GamificationServiceTest {
         donor.setTotalPoints(null);
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         gamificationService.awardPoints(1L, 25, "First points");
-
         // Then
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
         verify(userRepository).save(userCaptor.capture());
@@ -157,10 +137,8 @@ class GamificationServiceTest {
         // Given
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         gamificationService.awardPoints(1L, -30, "Penalty");
-
         // Then
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
         verify(userRepository).save(userCaptor.capture());
@@ -172,18 +150,16 @@ class GamificationServiceTest {
         // Given
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         gamificationService.awardPoints(1L, 0, "No change");
-
         // Then
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
         verify(userRepository).save(userCaptor.capture());
         assertThat(userCaptor.getValue().getTotalPoints()).isEqualTo(100);
     }
 
-    // ==================== Tests for checkAndUnlockAchievements ====================
-
+    // ==================== Tests for checkAndUnlockAchievements
+    // ====================
     @Test
     void testCheckAndUnlockAchievements_UnlocksDonationAchievement() {
         // Given
@@ -193,15 +169,12 @@ class GamificationServiceTest {
         when(userAchievementRepository.findByUserIdOrderByEarnedAtDesc(1L))
                 .thenReturn(Collections.emptyList());
         when(surplusPostRepository.countByDonorId(1L)).thenReturn(5L);
-
         UserAchievement newAchievement = new UserAchievement(donor, donationAchievement);
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenReturn(newAchievement);
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then
         assertThat(result).hasSize(1);
         verify(userAchievementRepository, times(2)).save(any(UserAchievement.class));
@@ -217,10 +190,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.findByUserIdOrderByEarnedAtDesc(1L))
                 .thenReturn(Collections.emptyList());
         when(surplusPostRepository.countByDonorId(1L)).thenReturn(0L); // No donations yet
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then
         assertThat(result).isEmpty();
         verify(userAchievementRepository, never()).save(any(UserAchievement.class));
@@ -235,11 +206,10 @@ class GamificationServiceTest {
                 .thenReturn(Arrays.asList(donationAchievement));
         when(userAchievementRepository.findByUserIdOrderByEarnedAtDesc(1L))
                 .thenReturn(Arrays.asList(existingAchievement));
-        // Don't stub countByDonorId since it won't be called if achievement is already earned
-
+        // Don't stub countByDonorId since it won't be called if achievement is already
+        // earned
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then
         assertThat(result).isEmpty();
         verify(userAchievementRepository, never()).save(any(UserAchievement.class));
@@ -256,7 +226,6 @@ class GamificationServiceTest {
         achievement2.setCriteriaValue(5);
         achievement2.setPointsValue(25);
         achievement2.setIsActive(true);
-
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(donationAchievement, achievement2));
@@ -266,10 +235,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then
         assertThat(result).hasSize(2);
         verify(userAchievementRepository, times(4)).save(any(UserAchievement.class));
@@ -279,7 +246,6 @@ class GamificationServiceTest {
     void testCheckAndUnlockAchievements_UserNotFound_ThrowsException() {
         // Given
         when(userRepository.findById(999L)).thenReturn(Optional.empty());
-
         // When & Then
         assertThatThrownBy(() -> gamificationService.checkAndUnlockAchievements(999L))
                 .isInstanceOf(RuntimeException.class)
@@ -298,10 +264,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenReturn(new UserAchievement(donor, donationAchievement));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         gamificationService.checkAndUnlockAchievements(1L);
-
         // Then
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
         verify(userRepository, times(1)).save(userCaptor.capture());
@@ -318,10 +282,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.findByUserIdOrderByEarnedAtDesc(1L))
                 .thenReturn(Collections.emptyList());
         // Don't stub claimRepository since it won't be called for mismatched role
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then - Should not unlock receiver achievement for donor
         assertThat(result).isEmpty();
         verify(userAchievementRepository, never()).save(any(UserAchievement.class));
@@ -335,28 +297,20 @@ class GamificationServiceTest {
                 .thenReturn(Arrays.asList(socialAchievement));
         when(userAchievementRepository.findByUserIdOrderByEarnedAtDesc(1L))
                 .thenReturn(Collections.emptyList());
-
-        Message message1 = new Message();
-        message1.setSender(donor);
-        Message message2 = new Message();
-        message2.setSender(donor);
-        when(messageRepository.findAll()).thenReturn(Arrays.asList(message1, message2));
-
+        // Social achievement requires 10 messages via MESSAGE_COUNT criteria
+        when(messageRepository.countBySenderId(1L)).thenReturn(2L);
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then - Should check social achievements for any role
         assertThat(result).isEmpty(); // Not enough messages (need 10)
     }
 
     // ==================== Tests for getUserGamificationStats ====================
-
     @Test
     void testGetUserGamificationStats_Success() {
         // Given
         UserAchievement userAchievement = new UserAchievement(donor, donationAchievement);
         userAchievement.setEarnedAt(LocalDateTime.now());
-
         // Add another achievement that's not yet unlocked
         Achievement nextAchievement = new Achievement();
         nextAchievement.setId(10L);
@@ -367,7 +321,6 @@ class GamificationServiceTest {
         nextAchievement.setCriteriaValue(10);
         nextAchievement.setPointsValue(25);
         nextAchievement.setIsActive(true);
-
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(userAchievementRepository.countByUserId(1L)).thenReturn(1L);
         when(userAchievementRepository.findByUserIdWithAchievementDetails(1L))
@@ -375,10 +328,8 @@ class GamificationServiceTest {
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(donationAchievement, nextAchievement));
         when(surplusPostRepository.countByDonorId(1L)).thenReturn(5L);
-
         // When
         GamificationStatsResponse result = gamificationService.getUserGamificationStats(1L);
-
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getUserId()).isEqualTo(1L);
@@ -392,7 +343,6 @@ class GamificationServiceTest {
     void testGetUserGamificationStats_UserNotFound_ThrowsException() {
         // Given
         when(userRepository.findById(999L)).thenReturn(Optional.empty());
-
         // When & Then
         assertThatThrownBy(() -> gamificationService.getUserGamificationStats(999L))
                 .isInstanceOf(RuntimeException.class)
@@ -408,10 +358,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.findByUserIdWithAchievementDetails(1L))
                 .thenReturn(Collections.emptyList());
         when(achievementRepository.findByIsActiveTrue()).thenReturn(Collections.emptyList());
-
         // When
         GamificationStatsResponse result = gamificationService.getUserGamificationStats(1L);
-
         // Then
         assertThat(result.getTotalPoints()).isEqualTo(0);
     }
@@ -424,10 +372,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.findByUserIdWithAchievementDetails(1L))
                 .thenReturn(Collections.emptyList());
         when(achievementRepository.findByIsActiveTrue()).thenReturn(Collections.emptyList());
-
         // When
         GamificationStatsResponse result = gamificationService.getUserGamificationStats(1L);
-
         // Then
         assertThat(result.getUnlockedAchievements()).isEmpty();
         assertThat(result.getProgressToNext()).isEmpty();
@@ -443,10 +389,8 @@ class GamificationServiceTest {
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(donationAchievement));
         when(surplusPostRepository.countByDonorId(1L)).thenReturn(0L);
-
         // When
         GamificationStatsResponse result = gamificationService.getUserGamificationStats(1L);
-
         // Then
         assertThat(result.getProgressToNext()).hasSize(1);
         AchievementProgress progress = result.getProgressToNext().get(0);
@@ -464,10 +408,8 @@ class GamificationServiceTest {
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(donationAchievement, claimAchievement));
         when(surplusPostRepository.countByDonorId(1L)).thenReturn(0L);
-
         // When
         GamificationStatsResponse result = gamificationService.getUserGamificationStats(1L);
-
         // Then - Should only show donor achievements
         assertThat(result.getProgressToNext()).hasSize(1);
         assertThat(result.getProgressToNext().get(0).getAchievementName()).isEqualTo("First Donation");
@@ -482,30 +424,23 @@ class GamificationServiceTest {
                 .thenReturn(Collections.emptyList());
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(socialAchievement));
-
-        Message message = new Message();
-        message.setSender(donor);
-        when(messageRepository.findAll()).thenReturn(Arrays.asList(message));
-
+        // Social achievement requires 10 messages via MESSAGE_COUNT criteria
+        when(messageRepository.countBySenderId(1L)).thenReturn(1L);
         // When
         GamificationStatsResponse result = gamificationService.getUserGamificationStats(1L);
-
         // Then - Social achievements should be included
         assertThat(result.getProgressToNext()).hasSize(1);
         assertThat(result.getProgressToNext().get(0).getAchievementName()).isEqualTo("Conversationalist");
     }
 
     // ==================== Tests for getAllAchievements ====================
-
     @Test
     void testGetAllAchievements_Success() {
         // Given
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(donationAchievement, claimAchievement, socialAchievement));
-
         // When
         List<AchievementResponse> result = gamificationService.getAllAchievements();
-
         // Then
         assertThat(result).hasSize(3);
         assertThat(result).extracting("name")
@@ -516,10 +451,8 @@ class GamificationServiceTest {
     void testGetAllAchievements_EmptyList() {
         // Given
         when(achievementRepository.findByIsActiveTrue()).thenReturn(Collections.emptyList());
-
         // When
         List<AchievementResponse> result = gamificationService.getAllAchievements();
-
         // Then
         assertThat(result).isEmpty();
     }
@@ -529,20 +462,16 @@ class GamificationServiceTest {
         // Given - Should only return active achievements
         Achievement inactiveAchievement = new Achievement();
         inactiveAchievement.setIsActive(false);
-
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(donationAchievement));
-
         // When
         List<AchievementResponse> result = gamificationService.getAllAchievements();
-
         // Then
         assertThat(result).hasSize(1);
         verify(achievementRepository).findByIsActiveTrue();
     }
 
     // ==================== Tests for Criteria Type Logic ====================
-
     @Test
     void testGetCurrentValueForCriteria_ClaimCount() {
         // Given
@@ -555,10 +484,8 @@ class GamificationServiceTest {
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
         when(userRepository.save(any(User.class))).thenReturn(receiver);
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(2L);
-
         // Then
         assertThat(result).hasSize(1); // Achievement unlocked because 5 >= 1
         verify(claimRepository).countByReceiverId(2L);
@@ -575,11 +502,9 @@ class GamificationServiceTest {
         pickupAchievement.setCriteriaValue(1);
         pickupAchievement.setPointsValue(10);
         pickupAchievement.setIsActive(true);
-
         Claim completedClaim = new Claim();
         completedClaim.setReceiver(receiver);
         completedClaim.setStatus(ClaimStatus.COMPLETED);
-
         when(userRepository.findById(2L)).thenReturn(Optional.of(receiver));
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(pickupAchievement));
@@ -587,15 +512,12 @@ class GamificationServiceTest {
                 .thenReturn(Collections.emptyList());
         when(claimRepository.findReceiverClaimsWithDetails(
                 eq(2L),
-                eq(List.of(ClaimStatus.COMPLETED))
-        )).thenReturn(Arrays.asList(completedClaim));
+                eq(List.of(ClaimStatus.COMPLETED)))).thenReturn(Arrays.asList(completedClaim));
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
         when(userRepository.save(any(User.class))).thenReturn(receiver);
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(2L);
-
         // Then
         assertThat(result).hasSize(1);
         verify(userAchievementRepository, times(2)).save(any(UserAchievement.class));
@@ -604,28 +526,18 @@ class GamificationServiceTest {
     @Test
     void testGetCurrentValueForCriteria_MessageCount() {
         // Given
-        Message msg1 = new Message();
-        msg1.setSender(donor);
-        Message msg2 = new Message();
-        msg2.setSender(donor);
-        Message msg3 = new Message();
-        msg3.setSender(receiver);
-
         socialAchievement.setCriteriaValue(2);
-
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(achievementRepository.findByIsActiveTrue())
                 .thenReturn(Arrays.asList(socialAchievement));
         when(userAchievementRepository.findByUserIdOrderByEarnedAtDesc(1L))
                 .thenReturn(Collections.emptyList());
-        when(messageRepository.findAll()).thenReturn(Arrays.asList(msg1, msg2, msg3));
+        when(messageRepository.countBySenderId(1L)).thenReturn(2L);
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenReturn(new UserAchievement(donor, socialAchievement));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(1L);
-
         // Then
         assertThat(result).hasSize(1); // Donor sent 2 messages
     }
@@ -635,10 +547,8 @@ class GamificationServiceTest {
         // Given
         when(userRepository.findById(1L)).thenReturn(Optional.of(donor));
         when(userRepository.save(any(User.class))).thenReturn(donor);
-
         // When
         gamificationService.awardPoints(1L, 10000, "Large reward");
-
         // Then
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
         verify(userRepository).save(userCaptor.capture());
@@ -657,33 +567,26 @@ class GamificationServiceTest {
         when(userAchievementRepository.save(any(UserAchievement.class)))
                 .thenReturn(new UserAchievement(receiver, claimAchievement));
         when(userRepository.save(any(User.class))).thenReturn(receiver);
-
         // When
         List<UserAchievement> result = gamificationService.checkAndUnlockAchievements(2L);
-
         // Then
         assertThat(result).hasSize(1);
         verify(userAchievementRepository, times(2)).save(any(UserAchievement.class));
     }
 
     // ==================== Tests for getLeaderboard ====================
-
     @Test
     void testGetLeaderboard_DonorRole_ReturnsTop10() {
         // Given
         List<User> topDonors = createMockUsers(UserRole.DONOR, 10);
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(topDonors);
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(topDonors);
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(10L);
         // Don't stub findById - user is in top 10 so it won't be called
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                1L);
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getTopUsers()).hasSize(10);
@@ -697,18 +600,14 @@ class GamificationServiceTest {
     void testGetLeaderboard_ReceiverRole_ReturnsTop10() {
         // Given
         List<User> topReceivers = createMockUsers(UserRole.RECEIVER, 10);
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(topReceivers);
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(topReceivers);
         when(userRepository.findByRole(eq(UserRole.RECEIVER), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.RECEIVER)).thenReturn(10L);
         // Don't stub findById - user is in top 10 so it won't be called
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.RECEIVER, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService
+                .getLeaderboard(UserRole.RECEIVER, 1L);
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getTopUsers()).hasSize(10);
@@ -720,26 +619,21 @@ class GamificationServiceTest {
     void testGetLeaderboard_CurrentUserOutsideTop10_IncludesUserEntry() {
         // Given
         List<User> topDonors = createMockUsers(UserRole.DONOR, 10);
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(topDonors);
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(topDonors);
         User currentUser = new User();
         currentUser.setId(99L);
         currentUser.setEmail("outside@test.com");
         currentUser.setRole(UserRole.DONOR);
         currentUser.setTotalPoints(50);
-        
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(20L);
         when(userRepository.findById(99L)).thenReturn(Optional.of(currentUser));
         when(userRepository.countByRoleAndTotalPointsGreaterThan(UserRole.DONOR, 50))
                 .thenReturn(10L); // 10 users have more points, so user is rank 11
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 99L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                99L);
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getTopUsers()).hasSize(10);
@@ -753,18 +647,15 @@ class GamificationServiceTest {
     @Test
     void testGetLeaderboard_EmptyLeaderboard_ReturnsEmptyList() {
         // Given
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(Collections.emptyList());
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(
+                Collections.emptyList());
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(0L);
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                1L);
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getTopUsers()).isEmpty();
@@ -781,23 +672,18 @@ class GamificationServiceTest {
         userWithOrg.setFullName("John Doe");
         userWithOrg.setRole(UserRole.DONOR);
         userWithOrg.setTotalPoints(1000);
-        
         Organization org = new Organization();
         org.setName("Test Organization");
         userWithOrg.setOrganization(org);
-        
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(Arrays.asList(userWithOrg));
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(
+                Arrays.asList(userWithOrg));
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(1L);
         // Don't stub findById - user is in top list
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                1L);
         // Then
         assertThat(result.getTopUsers().get(0).getDisplayName())
                 .isEqualTo("Test Organization");
@@ -812,19 +698,15 @@ class GamificationServiceTest {
         userWithName.setFullName("Jane Smith");
         userWithName.setRole(UserRole.RECEIVER);
         userWithName.setTotalPoints(500);
-        
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(Arrays.asList(userWithName));
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(
+                Arrays.asList(userWithName));
         when(userRepository.findByRole(eq(UserRole.RECEIVER), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.RECEIVER)).thenReturn(1L);
         // Don't stub findById - user is in top list
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.RECEIVER, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService
+                .getLeaderboard(UserRole.RECEIVER, 1L);
         // Then
         assertThat(result.getTopUsers().get(0).getDisplayName())
                 .isEqualTo("Jane Smith");
@@ -838,19 +720,15 @@ class GamificationServiceTest {
         userWithEmail.setEmail("fallback@test.com");
         userWithEmail.setRole(UserRole.DONOR);
         userWithEmail.setTotalPoints(250);
-        
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(Arrays.asList(userWithEmail));
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(
+                Arrays.asList(userWithEmail));
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(1L);
         // Don't stub findById - user is in top list
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                1L);
         // Then
         assertThat(result.getTopUsers().get(0).getDisplayName())
                 .isEqualTo("fallback@test.com");
@@ -864,19 +742,15 @@ class GamificationServiceTest {
         userWithNullPoints.setEmail("nopoints@test.com");
         userWithNullPoints.setRole(UserRole.DONOR);
         userWithNullPoints.setTotalPoints(null);
-        
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(Arrays.asList(userWithNullPoints));
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(
+                Arrays.asList(userWithNullPoints));
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(1L);
         // Don't stub findById - user is in top list
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                1L);
         // Then
         assertThat(result.getTopUsers().get(0).getTotalPoints()).isEqualTo(0);
     }
@@ -885,18 +759,14 @@ class GamificationServiceTest {
     void testGetLeaderboard_RankingIsCorrect() {
         // Given
         List<User> topDonors = createMockUsers(UserRole.DONOR, 5);
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(topDonors);
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(topDonors);
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(5L);
         // Don't stub findById - user is in top list
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 1L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                1L);
         // Then
         assertThat(result.getTopUsers()).hasSize(5);
         for (int i = 0; i < 5; i++) {
@@ -908,24 +778,19 @@ class GamificationServiceTest {
     void testGetLeaderboard_CurrentUserDifferentRole_NoCurrentEntry() {
         // Given
         List<User> topDonors = createMockUsers(UserRole.DONOR, 10);
-        org.springframework.data.domain.Page<User> page = 
-            new org.springframework.data.domain.PageImpl<>(topDonors);
-        
+        org.springframework.data.domain.Page<User> page = new org.springframework.data.domain.PageImpl<>(topDonors);
         User receiverUser = new User();
         receiverUser.setId(99L);
         receiverUser.setEmail("receiver@test.com");
         receiverUser.setRole(UserRole.RECEIVER); // Different role
         receiverUser.setTotalPoints(500);
-        
         when(userRepository.findByRole(eq(UserRole.DONOR), any()))
                 .thenReturn(page);
         when(userRepository.countByRole(UserRole.DONOR)).thenReturn(10L);
         when(userRepository.findById(99L)).thenReturn(Optional.of(receiverUser));
-
         // When
-        com.example.foodflow.model.dto.LeaderboardResponse result = 
-            gamificationService.getLeaderboard(UserRole.DONOR, 99L);
-
+        com.example.foodflow.model.dto.LeaderboardResponse result = gamificationService.getLeaderboard(UserRole.DONOR,
+                99L);
         // Then - Current user entry should be null since they're a different role
         assertThat(result.getTopUsers()).hasSize(10);
         assertThat(result.getCurrentUserEntry()).isNull();
